--- a/Namaste/Cheap Talk/index.css
+++ b/Namaste/Cheap Talk/index.css
@@ -36,3 +36,14 @@
   display: flex;
   flex-wrap: wrap;
 }
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.shimmer-item {
+  flex: 1 1 calc(16.66% - 10px); /* Adjust the percentage to fit 5-6 items per row */
+  margin: 5px;
+  box-sizing: border-box;
+}
